bpo-46018: Ensure that math.expm1 does not raise on underflow